# vaultwright

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSING.md  MANIFEST.in  NOTICE  README.md  TRADEMARK.md  pyproject.toml
.githooks/: pre-commit
cli/: README.md
docs/: AGENT_READINESS_BENCHMARK.md  CODEX_KICKOFF_PROMPT.md  CONVERSION_REVIEW_GUIDE.md  DESIGN_PARTNER_PROTOCOL.md  JOURNALED_MATERIALIZATION_BENCHMARK.md  MICROSOFT_365_HANDOFF.md  PILOT_WORKSHEET.md  PRODUCT.md  PROFILE_SCHEMA.md  RECOVERY.md  RELEASE.md  SECURITY_MODEL.md  SYNC_SPEC.md  V1_FINISH_LINE.md  V1_PROGRESS_AUDIT_2026-06-23.md  VAULTWRIGHT_CODEX_MEGA_PROMPT_2026-06-24.md  VAULTWRIGHT_WHITEPAPER.md  VAULTWRIGHT_WHITEPAPER_2026-06-23.md  information-architecture.md  methodology.md  positioning.md  quickstart.md
examples/: DATA_PROVENANCE.md  README.md
scripts/: benchmark_journaled_materialization.py  init.sh  no_data_scan.py  sync_template_copies.py
template/: .gitignore  AGENTS.md  CLAUDE.md  Documents.base  INDEX.md  RETENTION.md
tests/: test_annotation_migration.py  test_changes_changed_sync.py  test_changes_feed.py  test_changes_materialize.py  test_changes_native_watch.py  test_changes_reconcile.py  test_changes_replay.py  test_changes_stability.py  test_changes_watch.py  test_changes_worker.py  test_examples.py  test_journal.py  test_journaled_materialization_benchmark.py  test_license_headers.py  test_lifecycle_contract.py  test_lint_vault.py  test_no_data_scan.py  test_packaged_template.py  test_profile_contract.py  test_profile_driven_reports.py  (+3 more)
(+165 files in other folders)
