[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultwright"
version = "0.1.0a1"
description = "Governed document-to-knowledge lifecycle tooling for local Vaultwright vaults."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "cz1993" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "markitdown[docx,pptx,xlsx,pdf]>=0.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
watch = [
  "watchdog>=4.0",
]

[project.scripts]
vaultwright = "vaultwright.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vaultwright = [
  "builtin_profiles/*.yml",
  "template/**/*",
  "template/.gitignore",
  "template/**/.gitkeep",
]
